--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,17 @@
 {
-    "recommendations": ["ms-vscode.cpptools", "ms-vscode.cpptools-extension-pack", "ms-vscode.cpptools-themes", 
-                       "twxs.cmake", "ms-vscode.cmake-tools", "marus25.cortex-debug", "mcu-debug.debug-tracker-vscode",
-                       "mcu-debug.memory-view", "mcu-debug.peripheral-viewer", "mcu-debug.rtos-views", "ms-vscode.vscode-serial-monitor",
-                       "Wokwi.wokwi-vscode"]
+    "recommendations": [
+        "ms-vscode.cpptools",
+        "mcu-debug.debug-tracker-vscode",
+        "Wokwi.wokwi-vscode",
+        "ms-vscode.cmake-tools",
+        "raspberry-pi.raspberry-pi-pico",
+        "mcu-debug.memory-view",
+        "ms-vscode.vscode-serial-monitor",
+        "mcu-debug.rtos-views",
+        "mcu-debug.peripheral-viewer",
+        "marus25.cortex-debug",
+        "ms-vscode.cpptools-extension-pack",
+        "ms-vscode.cpptools-themes",
+        "twxs.cmake"
+    ]
 }
-
